Fix badge label alignment

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -240,3 +240,29 @@ nav .brand-logo{
   border-radius: .25em;
 }
 
+.custom-badge{
+  display: inline-block;
+  padding: 8px 14px;
+  margin-bottom: 2px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 20px;
+}
+
+.custom-badge-style{
+  color: #fff;
+  background-color: #6EC2CF;
+  border-color: #ccc;
+}
